# MANIAC

./: .gitignore
Diffusion/Finite_Elements/1D_v1.0/src/: m_CSR_types.f90  m_boundaries.f90  m_finite.F90  m_quadrature.f90  m_utilib.f90
Diffusion/Finite_Elements/1D_v1.1/: CMakeLists.txt
Diffusion/Finite_Elements/1D_v1.1/src/: FEM_1D.f90  m_boundaries.f90  m_integrals.f90  m_materials.f90  m_petsc.F90
Diffusion/Finite_Elements/1D_v1.2/: MATS.txt
Diffusion/Finite_Elements/1D_v1.2/src/: FEM_1D.f90  m_PCG_solver.f90  m_assembly.F90  m_constants.f90  m_fem.F90  m_integrals.f90  m_output.f90
Diffusion/Finite_Elements/2D_v1.0/: 2D_V1.0.F90  VTK_Extractor.F90  main.F90
Diffusion/Finite_Elements/2D_v1.0/src/: m_constants.F90  m_material.F90  m_outpVTK.F90  m_petsc.F90  m_quadrature.F90
Diffusion/Finite_Elements/2D_v1.1/: 2D_V1.1.F90  CMakeLists.txt  MATS.txt
Diffusion/Finite_Elements/2D_v1.1/src/: m_GMSH.F90  m_PCG.F90  m_material.F90  m_petsc.F90  m_types.F90
Diffusion/Finite_Elements/2D_v1.2/: 2D_V1.2.F90  CMakeLists.txt
Diffusion/Finite_Elements/2D_v1.2/input/: htr_test.asmg  wigner_test.asmg
Diffusion/Finite_Elements/2D_v1.2/src/: m_PCG.F90  m_asmg.F90  m_boundaries.F90  m_finite_elements.F90  m_outpVTK.F90  m_petsc.F90  m_quadrature.F90  m_types.F90
Diffusion/Finite_Elements/3D_v1.0/: 3D_diffusion.F90  C5G7_3D.pvsm
Diffusion/Finite_Elements/3D_v1.0/src/: m_boundaries.F90  m_constants.F90  m_finite_elements.F90  m_material.F90  m_mesh_quality.F90  m_outpVTK.F90  m_petsc.F90
Diffusion/Finite_Elements/src2D/: m_PCG.F90  m_boundaries.F90  m_finite_elements.F90  m_material.F90  m_outpVTK.F90  m_petsc.F90
Diffusion/Finite_Volume/2D/: m_BC_types.f90  m_current.f90  m_mesh_types.f90
Diffusion/Finite_Volume/3D/: CMakeLists.txt  material_inputs_1g.txt  mesh_inputs_3g.txt  mesh_subcrit_V&V.txt
Diffusion/IGA/2D_v1.0/: 2D_V1.2.F90  CMakeLists.txt
Diffusion/IGA/2D_v1.0/input/: C5G7.asmg  pincell_test.asmg  supercell_test.asmg
Diffusion/IGA/2D_v1.0/src/: m_asmg.F90  m_basis.F90  m_boundaries.F90  m_outpVTK.F90  m_petsc.F90
Diffusion/IGA/3D_v1.0/: 3D_V1.0.F90  CMakeLists.txt
Diffusion/IGA/3D_v1.0/input/: cubes.asmg  rod_test.asmg  rod_test2.asmg
Diffusion/IGA/3D_v1.0/src/: m_PCG.F90  m_asmg.F90  m_basis.F90  m_boundaries.F90  m_constants.F90  m_outpVTK.F90  m_petsc.F90  m_types.F90
Diffusion/Isogeometric/2D_v1.0/: 2D_V1.2.F90
Diffusion/Isogeometric/2D_v1.0/src/: m_PCG.F90  m_basis.F90  m_types.F90
Diffusion/Isogeometric/3D_v1.0/: 3D_V1.0.F90  CMakeLists.txt
Diffusion/Isogeometric/3D_v1.0/input/: rod_test.asmg
Diffusion/Isogeometric/3D_v1.0/src/: m_PCG.F90  m_asmg.F90  m_basis.F90  m_boundaries.F90  m_constants.F90  m_outpVTK.F90  m_petsc.F90  m_quadrature.F90
Finite/1D_v1.0/: CMakeLists.txt
Finite/1D_v1.0/src/: FEM_1D.f90
Finite/1D_v1.1/: CMakeLists.txt
Finite/1D_v1.1/src/: FEM_1D.f90  m_CSR.f90  m_assembly.F90  m_constants.f90  m_fem.F90  m_integrals.f90  m_materials.f90  m_output.f90  m_quadrature.f90
Finite/2D_V1.1/: 2D_V1.1.F90
Finite/2D_V1.1/src/: m_PCG.F90  m_boundaries.F90  m_petsc.F90
Finite/2D_v1.0/: CMakeLists.txt  InputDeck.txt  VTKmesh.vtk  main.F90
Finite/2D_v1.0/src/: m_GMSH.F90  m_PCG.F90  m_boundaries.F90  m_finite_elements.F90  m_material.F90  m_outpVTK.F90  m_petsc.F90  m_types.F90
Finite/2D_v1.1/: 2D_V1.1.F90  CMakeLists.txt  VTK_Extractor.F90  VTK_Extractor_V2.0.F90
Finite/2D_v1.1/src/: m_GMSH.F90  m_PCG.F90  m_boundaries.F90  m_constants.F90  m_material.F90  m_outpVTK.F90  m_petsc.F90
Finite/3D_v1.0/: 3D_diffusion.F90  CMakeLists.txt
Finite/3D_v1.0/src/: m_GMSH.F90  m_PCG.F90  m_mesh_quality.F90  m_petsc.F90  m_quadrature.F90  m_timing.F90  m_types.F90
Transport/Finite_Elements/2D_v1.0/: 2D_V1.1.F90  CMakeLists.txt  MATS.txt
Transport/Finite_Elements/2D_v1.0/src/: m_GMSH.F90  m_finite_elements.F90  m_material.F90  m_outpVTK_dfem.F90  m_quadrature.F90  m_sweep_order.F90  m_transport.F90  m_types.F90
Transport/Finite_Elements/2D_v1.1/: 2D_V1.1.F90  CMakeLists.txt  VTK_Extractor_V2.0.F90
Transport/Finite_Elements/2D_v1.1/input/: MATS.txt
Transport/Finite_Elements/2D_v1.1/src/: m_GMSH.F90  m_finite_elements.F90  m_outpVTK_dfem.F90  m_types.F90
Transport/Finite_Elements/2D_v1.2/: 2D_V1.1.F90  2D_V1.2.F90  CMakeLists.txt
Transport/Finite_Elements/2D_v1.2/input/: PINS.txt  supercell_test.asmg
Transport/Finite_Elements/2D_v1.2/src/: m_asmg.F90  m_basis.F90  m_constants.F90  m_finite_elements.F90  m_material.F90  m_outpVTK_dfem.F90  m_precompute.F90  m_quadrature.F90  m_sweep_order.F90  m_transport.F90  m_transport_precompute.F90  m_types.F90
Transport/Finite_Elements/3D_v1.0/: 3D_V1.0.F90  CMakeLists.txt
Transport/Finite_Elements/3D_v1.0/input/: trial_mesh.vtk
Transport/Finite_Elements/3D_v1.0/src/: m_GMSH.F90  m_constants.F90  m_finite_elements.F90  m_precompute.F90  m_quadrature.F90  m_sweep_order.F90
Transport/Finite_Elements/3D_v1.1/: .3D_V1.0.F90.swp  3D_V1.0.F90  CMakeLists.txt
Transport/Finite_Elements/3D_v1.1/input/: trial_mesh.vtk
Transport/Finite_Elements/3D_v1.1/src/: m_GMSH.F90  m_material.F90  m_sweep_order.F90  m_transport.F90  m_types.F90  m_utilities.F90
Transport/Finite_Volume/: CMakeLists.txt  make.sh  plot_phi.gp
Transport/Finite_Volume/src/: m_Sn_XY.F90  m_outpVTK.F90  m_quadrature.f90
Transport/IGA/2D_v1.1/: 2D_V1.1.F90  CMakeLists.txt
Transport/IGA/2D_v1.1/input/: circle.asmg  dragon.asmg  pincell.asmg  squares_IGA_FDG.asmg
Transport/IGA/2D_v1.1/src/: m_asmg.F90  m_basis.F90  m_constants.F90  m_material.F90  m_outpVTK_dfem.F90  m_precompute.F90  m_quadrature.F90  m_sweep_order.F90  m_transport.F90  m_types.F90
Transport/IGA/3D_v1.2/: 3D_IGA.F90  CMakeLists.txt
Transport/IGA/3D_v1.2/input/: MATS.txt  cubes.asmg  dragon.asmg  pincell.asmg  pincell_test.asmg  rod_test.asmg  stretched_cubes.asmg
Transport/IGA/3D_v1.2/src/: m_asmg.F90  m_basis.F90  m_material.F90  m_outpVTK_dfem.F90  m_precompute.F90  m_quadrature.F90  m_sweep_order.F90  m_transport.F90  m_types.F90
